Container/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pruebadevsu-deployment
  labels:
    app: pruebadevsu
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pruebadevsu
  template:
    metadata:
      labels:
        app: pruebadevsu
    spec:
      containers:
        - name: pruebadevsu
          image: kike21/pruebadevsu:latest
          ports:
            - containerPort: 8000
