Container/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pruebadevsu-service
spec:
  selector:
    app: pruebadevsu
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
