Container/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pruebadevsu-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: pruebadevsu.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pruebadevsu-service
                port:
                  number: 8000
